--- a/libraries/image/test/image.test.html
+++ b/libraries/image/test/image.test.html
@@ -1,34 +1,59 @@
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>TESTS</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/4.2.0/chai.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
-    <script src="../dist/teachablemachine-image.min.js"></script>
-    <script src="../node_modules/mocha/mocha.js"></script>
-    <link rel="stylesheet" href="../node_modules/mocha/mocha.css" />
-</head>
-<body>    
-    <script type="text/javascript">
-        const mochaEl = document.createElement('div');
-        mochaEl.setAttribute("id", "mocha");
-        document.body.append(mochaEl);
+<div>Teachable Machine Image Model</div>
+<button type="button" onclick="init()">Start</button>
+<div id="webcam-container"></div>
+<div id="label-container"></div>
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
+<script type="text/javascript">
+    // More API functions here:
+    // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
 
-        /**
-         * The purpose of this test suite is only to test that the bundle loads
-         * correctly. The rest of the test suite tests the local typescript files
-         */
-        const assert = chai.assert;
-        describe('Testing UMD Bundle', () => {
-            it('should be on window', () => {
-                assert.equal(typeof window.tmImage, 'object');
-                assert.equal(typeof tmImage.version, 'string');
-                assert.equal(tmImage.IMAGE_SIZE, 224, 'IMAGE_SIZE should be 224');
-            });
-        });
-        setTimeout(() => {
-            mocha.run()
-        }, 100)
-    </script>
-</body>
-</html>
+    // the link to your model provided by Teachable Machine export panel
+    const URL = "./my_model/";
+
+    let model, webcam, labelContainer, maxPredictions;
+
+    // Load the image model and setup the webcam
+    async function init() {
+        const modelURL = URL + "model.json";
+        const metadataURL = URL + "metadata.json";
+
+        // load the model and metadata
+        // Refer to tmImage.loadFromFiles() in the API to support files from a file picker
+        // or files from your local hard drive
+        // Note: the pose library adds "tmImage" object to your window (window.tmImage)
+        model = await tmImage.load(modelURL, metadataURL);
+        maxPredictions = model.getTotalClasses();
+
+        // Convenience function to setup a webcam
+        const flip = true; // whether to flip the webcam
+        webcam = new tmImage.Webcam(200, 200, flip); // width, height, flip
+        await webcam.setup(); // request access to the webcam
+        await webcam.play();
+        window.requestAnimationFrame(loop);
+
+        // append elements to the DOM
+        document.getElementById("webcam-container").appendChild(webcam.canvas);
+        labelContainer = document.getElementById("label-container");
+        for (let i = 0; i < maxPredictions; i++) { // and class labels
+            labelContainer.appendChild(document.createElement("div"));
+        }
+    }
+
+    async function loop() {
+        webcam.update(); // update the webcam frame
+        await predict();
+        window.requestAnimationFrame(loop);
+    }
+
+    // run the webcam image through the image model
+    async function predict() {
+        // predict can take in an image, video or canvas html element
+        const prediction = await model.predict(webcam.canvas);
+        for (let i = 0; i < maxPredictions; i++) {
+            const classPrediction =
+                prediction[i].className + ": " + prediction[i].probability.toFixed(2);
+            labelContainer.childNodes[i].innerHTML = classPrediction;
+        }
+    }
+</script>
